# mousemove

./: Cargo.toml  Dockerfile  hello.cpp
.cargo/: config.toml
src/: main.rs
src/platform/: mod.rs  platform_macos.rs  platform_windows.rs
